# dive

./: Cargo.toml  LICENSE  Makefile  README.md  bookmarks.json  dive.tape
src/: main.rs
src/dive/: app.rs  bookmark_manager.rs  command_queue.rs  display_object.rs  gosub_logger.rs  help.rs  inputbox.rs  logger.rs  menu.rs  mod.rs  obj_manager.rs  status.rs  tab.rs  tab_manager.rs  test.rs  ui.rs  widget_manager.rs
src/dive/display_objects/: help.rs  inputbox.rs  menu.rs  mod.rs  status.rs  tab_display.rs  test.rs
src/dive/widgets/: bookmark_list.rs  help.rs  input.rs  log.rs  menu_bar.rs  mod.rs  splash.rs  status_bar.rs  tab_list.rs  tab_manager.rs  tabs.rs  test.rs
