[package]
name = "dive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossterm = "0.27.0"
ratatui = "0.25.0"
tui-input = "0.8.0"
log = "0.4.20"
simple_logger = "4.3.3"
derive_more = { version = "0.99", features = [] }
better-panic = "0.3.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = [] }
tui-tree-widget = "0.16.0"
filetreelist = "0.5.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = "0.4.31"
once_cell = "1.19.0"
ureq = "2.9.1"
